--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                     <reportFormat>plain</reportFormat>
                     <consoleOutputReporter>
                         <disable>true</disable>
